--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hugocxl/react-to-image": "^0.0.9",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.4",
@@ -22,6 +23,7 @@
     "clsx": "^2.1.0",
     "geist": "^1.2.0",
     "gray-matter": "^4.0.3",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "next-mdx-remote": "^4.4.1",
