--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hugocxl/react-to-image": "^0.0.9",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.4",
@@ -23,7 +22,7 @@
     "clsx": "^2.1.0",
     "geist": "^1.2.0",
     "gray-matter": "^4.0.3",
-    "html-to-image": "^1.11.11",
+    "highlight.js": "^11.9.0",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "next-mdx-remote": "^4.4.1",
@@ -32,6 +31,7 @@
     "react-dom": "^18",
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "3.0.1",
+    "tailwind-highlightjs": "^2.0.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
