--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "geist": "^1.2.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.9.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "next-mdx-remote": "^4.4.1",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
